Restore user-provided abstract
Updated abstract: six components, 10000x speedup, simplified
OracleCheck description, exact wording per user specification.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -68,11 +68,11 @@ $^{1}$Cold Spring Harbor Laboratory\\
 \maketitle
 
 \begin{abstract}
-Deep learning models predict cis-regulatory element (CRE) function with remarkable accuracy, yet synthetic enhancers and promoters designed by these models routinely fail \emph{in vivo}. This gap limits faster biomanufacturing of therapeutic proteins, gene therapies requiring cell-type specific expression, and crops engineered to activate stress-response or growth genes.
+Deep learning models predict cis-regulatory element (CRE) function with remarkable accuracy, yet synthetic enhancers and promoters designed by these models routinely fail \emph{in vivo}. This gap limits faster biomanufacturing of therapeutic proteins. gene therapies requiring cell-type specific expression, and crops engineered to activate stress-response or growth genes.
 
-\fusemap{} is the first comprehensive framework bridging this gap by integrating biophysics into regulatory DNA prediction and design. The framework comprises seven synergistic components. \physinformer{} and \tileformer{} are the first models predicting biophysical landscapes of DNA: over 500 features spanning thermodynamics, mechanics, electrostatics, and more at 95\% accuracy and up to 12,000$\times$ the speed of conventional calculations, solving the bottleneck of data limiting biophysical genomics research. \cadence{} achieves state-of-the-art prediction, matching or exceeding top published models in human, fly, plant, and more cell lines. \place{} provides the first post-hoc uncertainty quantification for genomic deep learning models, distinguishing reliable predictions from risky extrapolations. \stwoa{}, a pipeline that predicts regulatory activity from conserved DNA biophysical properties, achieved the first successful zero-shot cross-species transfer for quantitative regulatory activity prediction---bypassing species-specific transcription factor binding sites and sequence motifs that traditional models learn from. \physicsvae{} enables inverse design of CREs with targeted biophysical profiles (64\% reconstruction accuracy), while \oraclecheck{} provides a comprehensive in-silico validation protocol---combining physics conformity, composition hygiene, \place{} confidence, and distributional tests---that flags aberrant designs with GREEN/YELLOW/RED verdicts before costly experiments.
+\fusemap{} is the first comprehensive framework bridging this gap by integrating biophysics into regulatory DNA prediction and design. The framework comprises six synergistic components. \physinformer{} and \tileformer{} are the first models predicting biophysical landscapes of DNA: over 500 features spanning thermodynamics, mechanics, electrostatics, and more at 95\% accuracy and 10,000$\times$ the speed of conventional calculations, solving the bottleneck of data limiting biophysical genomics research. \cadence{} achieves state-of-the-art prediction, exceeding top published models in human, fly, plant, and more cell lines. \place{} provides the first post-hoc uncertainty quantification for genomic deep learning models, distinguishing reliable predictions from risky extrapolations. \stwoa{}, a pipeline that predicts regulatory activity from conserved DNA biophysical properties, achieved the first successful zero-shot cross-species transfer for quantitative regulatory activity prediction---bypassing species-specific transcription factor binding sites and sequence motifs that traditional models learn from. \physicsvae{} enables inverse design of CREs with targeted biophysical profiles (64\% reconstruction accuracy), while \oraclecheck{} provides instant validation against natural biophysical landscapes---flagging aberrant designs before costly experiments.
 
-Through experiments spanning multiple species, \fusemap{} reveals biophysics' role in regulatory DNA and demonstrates that conserved biophysical features explain 4$\times$ more regulatory activity in plants than animals, enabling unprecedented zero-shot plant-to-plant transfer ($\rho = 0.70$). For therapeutics, \fusemap{}-designed liver-targeted enhancers achieve 99\% specificity with built-in naturality validation, absent from existing pipelines---ensuring designs work \emph{in vivo}. \fusemap{} represents a paradigm shift toward reliable DNA engineering and unlocks biophysical-informed regulatory genomics---enabling confident synthetic CRE design in any context: gene therapy, protein manufacturing, and even cross-species bioengineering, bypassing costly wet lab assays.
+Through experiments spanning multiple species, \fusemap{} reveals biophysics' role in regulatory DNA and demonstrates that conserved biophysical features explain 4$\times$ more regulatory activity in plants than animals, enabling unprecedented zero-shot plant-to-plant transfer ($\rho = 0.70$). For therapeutics, \fusemap{}-designed liver-targeted enhancers achieve 99\% specificity with built-in naturality validation, absent from existing pipelines---ensuring designs work \emph{in vivo}. \fusemap{} represents a paradigm shift toward reliable DNA engineering and unlocks biophysical-informed regulatory genomics---enabling confident synthetic CRE design in any context, gene therapy, protein manufacturing, and even cross-species bioengineering, bypassing costly wet lab assays.
 \end{abstract}
 
 %==============================================================================
